# mcp-toolgen

./: pyproject.toml  test_mcp_toolgen.py
.github/workflows/: ci.yml
mcp_toolgen/: __init__.py  mcp_toolgen.py
